samples/_failures_safe/1761610294_a21e65_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_779608cf.c: In function ‘main’:
./samples/SAFE/__tmp_779608cf.c:166:5: error: expected declaration or statement at end of input
  166 |     Token tokens[MAX_TOKENS];
      |     ^~~~~
